--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,1 +1,1 @@
-@import './../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap.scss'@import 'karol.scss'@import 'marcin.scss'@import 'irek.scss'@import 'roman.scss'html {  font-size: 62.5%;}
+@import './../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';html {  font-size: 62.5%;}body {}
